--- a/.github/workflows/unit-testing.yml
+++ b/.github/workflows/unit-testing.yml
@@ -18,6 +18,9 @@ jobs:
 
     - name: "npm run build"
       run: npm run build
+    
+    - name: "npm run lint"
+      run: npm run eslint
 
     - name: "npm run test"
       run: npm run test
