--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "build": "tsc",
     "start": "nodemon src/server.ts",
     "test": "jest",
+    "eslint": "eslint",
     "test-js": "test-js config:init"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.8",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1"
