--- a/package.json
+++ b/package.json
@@ -17,18 +17,25 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
+    "typeorm": "^0.2.28"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.14",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mysql": "^2.15.15",
     "@types/node": "^14.10.1",
     "@types/supertest": "^2.0.10",
-    "jest": "^26.4.2",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
+    "eslint": "^7.11.0",
+    "eslint-config-google": "^0.14.0",
+    "jest": "^26.6.0",
     "nodemon": "^2.0.4",
     "supertest": "^5.0.0",
-    "ts-jest": "^26.4.0",
+    "ts-jest": "^26.4.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   }
